--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "scripts": {
-    "dev": "wrangler dev --live-reload src/index.tsx",
-    "deploy": "wrangler deploy --minify src/index.tsx"
+    "dev": "concurrently tailwind.watch \"pnpm run tailwind.watch\" \"npx wrangler dev --live-reload src/index.tsx\"",
+    "deploy": "wrangler deploy --minify src/index.tsx",
+    "tailwind.watch": "tailwindcss -i ./src/input.css -o ./assets/tailwind.css -w",
+    "generate": "drizzle-kit generate:sqlite --schema=src/schema.ts",
+    "up": "drizzle-kit up:sqlite --schema=src/schema.ts"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.1.3",
+    "drizzle-kit": "^0.19.13",
+    "drizzle-orm": "^0.28.6",
     "hono": "^3.3.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230628.0",
+    "concurrently": "^8.2.1",
+    "tailwindcss": "^3.3.3",
     "wrangler": "^3.1.2"
   }
 }
